--- a/main.tex
+++ b/main.tex
@@ -56,88 +56,105 @@
 
 % START START START START START START START START START START START START START
 
-\begin{frame}{Motivation: particle physics analysis}
-\Large
-\vspace{0.23 cm}
-\begin{columns}
-\column{0.5\linewidth}
-\only<1>{\includegraphics[width=\linewidth]{omega-minus-1.png}}\only<2->{\includegraphics[width=\linewidth]{omega-minus-2.png}}
-\column{0.5\linewidth}
+% \begin{frame}{Motivation: particle physics analysis}
+% \Large
+% \vspace{0.23 cm}
+% \begin{columns}
+% \column{0.5\linewidth}
+% \only<1>{\includegraphics[width=\linewidth]{omega-minus-1.png}}\only<2->{\includegraphics[width=\linewidth]{omega-minus-2.png}}
+% \column{0.5\linewidth}
+%
+% \begin{center}
+% \begin{onlyenv}<1>
+% This is a famous photo: the 1964 discovery of the $\Omega$ baryon.
+%
+% \vspace{1 cm}
+% Do you see it?
+%
+% \vspace{1 cm}
+% \end{onlyenv}\begin{onlyenv}<2>
+% How about now?
+%
+% \begin{align*}
+% K^- + p & \to \Omega^- + K^+ + K^0 \\
+% \Omega^- & \to \Xi^0 + \pi^- \\
+% \Xi^0 & \to \Lambda^0 + \pi^0 \\
+% \Lambda^0 & \to p + \pi^- \\
+% \pi^0 & \to \gamma + \gamma
+% \end{align*}
+%
+% \vspace{1 cm}
+% \end{onlyenv}\begin{onlyenv}<3>
+% This is what particle physicists do: we collide particles, produce new ones and take pictures of their decay chains.
+%
+% \vspace{1 cm}
+% However, these pictures come to us unlabeled: lots of interactions overlap the ``interesting'' ones.
+%
+% \vspace{1 cm}
+% \end{onlyenv}
+% \end{center}
+%
+% \end{columns}
+% \end{frame}
+%
+% \begin{frame}{}
+% \begin{columns}
+% \column{1.15\linewidth}
+% \includegraphics[width=\linewidth]{090324_ALICE-hirez.jpg}
+% \end{columns}
+% \end{frame}
+%
+% \begin{frame}{Then and now}
+% \vspace{0.15 cm}
+% \begin{columns}
+% \column{0.32\linewidth}
+% \includegraphics[width=\linewidth]{H4000010-Team_that_discovered_Omega_minus_particle.jpg}
+%
+% \column{0.5\linewidth}
+% \begin{center}
+% \begin{columns}
+% \column{0.35\linewidth}
+% \centering
+% photographs
+%
+% \vspace{0.5 cm}
+% 100,000 events
+%
+% \vspace{0.5 cm}
+% manual/semi-automated scans
+%
+% \column{0.35\linewidth}
+% \centering
+% digitized signals \\
+%
+% \vspace{0.5 cm}
+% $\sim$trillion events \\
+%
+% \vspace{0.5 cm}
+% algorithmic searches and machine learning
+% \end{columns}
+% \end{center}
+%
+% \column{0.32\linewidth}
+% \includegraphics[width=\linewidth]{cms25_2.jpg}
+% \end{columns}
+% \end{frame}
+%
+% \begin{frame}{Algorithm to identify a particle decay}
+% \large
+% \vspace{0.15 cm}
+% \begin{center}
+% \includegraphics[height=4.2 cm]{kshort-1.png}\hspace{0.1 cm}\includegraphics[height=4.2 cm]{kshort-2.png}\hspace{0.1 cm}\includegraphics[height=4.2 cm]{kshort-3.png}
+% \end{center}
+%
+% \vspace{0.15 cm}
+% \begin{enumerate}
+% \item Loop over all pairs of particle tracks, tentatively labeling them $\pi^+$ and $\pi^-$.
+% \item Calculate m = $\sqrt{(E_{\pi^+} + E_{\pi^-})^2 - \left|\vec{p}_{\pi^+} + \vec{p}_{\pi^-}\right|^2}$.
+% \item The ones with $m \sim m_{K_s} = 0.5\mbox{ GeV}/c^2$ are good candidates.
+% \end{enumerate}
+% \end{frame}
 
-\begin{center}
-\begin{onlyenv}<1>
-This is a famous photo: the 1964 discovery of the $\Omega$ baryon.
-
-\vspace{1 cm}
-Do you see it?
-
-\vspace{1 cm}
-\end{onlyenv}\begin{onlyenv}<2>
-How about now?
-
-\begin{align*}
-K^- + p & \to \Omega^- \\
-\Omega^- & \to \Xi^0 + \pi^- \\
-\Xi^0 & \to \Lambda^0 + \gamma + \gamma \\
-\Lambda^0 & \to p + \pi^-
-\end{align*}
-
-\vspace{1 cm}
-\end{onlyenv}\begin{onlyenv}<3>
-This is what particle physicists do: we collide particles, produce new ones and take pictures of their decay chains.
-
-\vspace{1 cm}
-However, these pictures come to us unlabeled: lots of interactions overlap the ``interesting'' ones.
-
-\vspace{1 cm}
-\end{onlyenv}
-\end{center}
-
-\end{columns}
-\end{frame}
-
-\begin{frame}{}
-\begin{columns}
-\column{1.15\linewidth}
-\includegraphics[width=\linewidth]{090324_ALICE-hirez.jpg}
-\end{columns}
-\end{frame}
-
-\begin{frame}{Then and now}
-\vspace{0.15 cm}
-\begin{columns}
-\column{0.32\linewidth}
-\includegraphics[width=\linewidth]{H4000010-Team_that_discovered_Omega_minus_particle.jpg}
-
-\column{0.5\linewidth}
-\begin{center}
-\begin{columns}
-\column{0.35\linewidth}
-\centering
-photographs
-
-\vspace{0.5 cm}
-100,000 events
-
-\vspace{0.5 cm}
-manual/semi-automated scans
-
-\column{0.35\linewidth}
-\centering
-digitized signals \\
-
-\vspace{0.5 cm}
-$\sim$trillion events \\
-
-\vspace{0.5 cm}
-algorithmic searches and machine learning
-\end{columns}
-\end{center}
-
-\column{0.32\linewidth}
-\includegraphics[width=\linewidth]{cms25_2.jpg}
-\end{columns}
-\end{frame}
 
 \begin{frame}{}
 \end{frame}
