--- a/main.tex
+++ b/main.tex
@@ -203,8 +203,24 @@
 \end{frame}
 
 \begin{frame}{Programming languages used in particle physics}
+\large
 \vspace{0.5 cm}
 \includegraphics[width=\linewidth]{programming-languages.pdf}
+
+\vspace{0.25 cm}
+\begin{itemize}
+\item First programmable computers were used for particle physics simulations.
+\item Fortran was used to analyze events soon after the language was invented.
+\item Major transition from Fortran to C++ in the late 1990's/early 2000's.
+\item Very recent adoption of Python (alongside C++).
+\end{itemize}
+\end{frame}
+
+\begin{frame}{The Python transition}
+\vspace{0.2 cm}
+\includegraphics[width=\linewidth]{github-cmssw-lin.pdf}
+
+\includegraphics[width=\linewidth]{github-cmssw-frac.pdf}
 \end{frame}
 
 
