--- a/main.tex
+++ b/main.tex
@@ -329,12 +329,15 @@ It shows jagged arrays in terms of counts, offsets, starts/stops, and parents.
 \Large
 \vspace{0.5 cm}
 \begin{itemize}\setlength{\itemsep}{0.5 cm}
-\item Data structures are {\it fully composable:} a jagged array's content can be another jagged array, some fields of a record structure can be jagged, others not.
-\item Most operations (such as slicing) can modify the structure ({\tt counts}/{\tt offsets}/{\tt starts,stops}/{\tt parents}) without touching the content.
+\item<1-> Data structures are {\it fully composable:} a jagged array's content can be another jagged array, some fields of a record structure can be jagged, others not.
+\item<2-> Most operations (such as slicing) can modify the structure ({\tt counts}/{\tt offsets}/{\tt starts,stops}/{\tt parents}) without touching the content.
+
+\vspace{0.25 cm}
+\uncover<3->{\textcolor{gray}{(For instance, the content can be lazily loaded\ldots)}}
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Example: generate muon pairs}
+\begin{frame}{Example: generate distinct muon pairs}
 \vspace{0.2 cm}
 
 \begin{columns}
@@ -353,7 +356,7 @@ phi &  \textcolor{darkorange}{\tt -0.481,\ -0.123,\ -0.119,\ \ 1.246,\ -0.207,\ 
 eta &        \textcolor{blue}{\tt \ 0.882,\ \ 0.924,\ \ 0.923,\ -0.991,\ \ 0.953,\ -0.264,\ 0.629} \\
 \end{tabular}
 
-\vspace{0.75 cm}
+\vspace{0.6 cm}
 {\large\bf muons.choose(2):}
 
 \vspace{0.2 cm}
@@ -367,8 +370,10 @@ eta &        \textcolor{blue}{\tt \ 0.882,\ \ 0.924,\ \ 0.923,\ -0.991,\ \ 0.953
 \end{tabular}
 
 \vspace{-3.2 cm}
-\hfill\includegraphics[height=3.5 cm]{muons-choose-2.pdf}
+\uncover<2->{\hfill\includegraphics[height=3.5 cm]{muons-choose-2.pdf}}
 
+\vspace{0.2 cm}
+\uncover<3->{\textcolor{gray}{(The ``left'' and ``right'' of each pair is a link to the original muons.)}}
 \end{columns}
 \end{frame}
 
@@ -399,6 +404,124 @@ eta &        \textcolor{blue}{\tt \ 0.882,\ \ 0.924,\ \ 0.923,\ -0.991,\ \ 0.953
 %% \end{verbatim}
 %% \end{columns}
 %% \end{frame}
+
+\begin{frame}[fragile]{Awkward Array: data structures with a Numpy-like API}
+\small
+\hfill\includegraphics[height=2 cm]{awkward-logo.pdf}
+
+\vspace{-2 cm}
+\begin{minted}{python}
+>>> import awkward
+>>> array = awkward.fromiter(
+...     [[1.1, 2.2, None, 3.3, None],
+...      [4.4, [5.5]],
+...      [{"x": 6, "y": {"z": 7}}, None, {"x": 8, "y": {"z": 9}}]])
+\end{minted}
+
+\begin{uncoverenv}<2->
+\begin{minted}{python}
+>>> print(array)            # internally, these are all arrays
+[[1.1 2.2 None 3.3 None] [4.4 [5.5]] [<Row 0> None <Row 1>]]
+\end{minted}
+\end{uncoverenv}
+
+\begin{uncoverenv}<3->
+\begin{minted}{python}
+>>> print(array[:, -2:])    # all of outer list, last two of inner
+[[3.3 None] [4.4 [5.5]] [None <Row 1>]]
+\end{minted}
+\end{uncoverenv}
+
+\begin{uncoverenv}<4->
+\begin{minted}{python}
+>>> (array + 100).tolist()  # element-wise function applied to arrays
+[[101.1, 102.2, None, 103.3, None],
+ [104.4, [105.5]],
+ [{'x': 106, 'y': {'z': 107}}, None, {'x': 108, 'y': {'z': 109}}]]
+\end{minted}
+\end{uncoverenv}
+\end{frame}
+
+\begin{frame}[fragile]{Structure is as deep as the {\it data type,} not the {\it data}}
+\begin{columns}
+\column{1.1\linewidth}
+\scriptsize
+\begin{minted}{python}
+>>> array.layout
+ layout 
+[           ()] JaggedArray(starts=layout[0], stops=layout[1], content=layout[2])
+[            0]   ndarray(shape=3, dtype=dtype('int64'))
+[            1]   ndarray(shape=3, dtype=dtype('int64'))
+[            2]   IndexedMaskedArray(mask=layout[2, 0], content=layout[2, 1], maskedwhen=-1)
+[         2, 0]     ndarray(shape=10, dtype=dtype('int64'))
+[         2, 1]     UnionArray(tags=layout[2, 1, 0], index=layout[2, 1, 1],
+                               contents=[layout[2, 1, 2], layout[2, 1, 3], layout[2, 1, 4]])
+[      2, 1, 0]       ndarray(shape=7, dtype=dtype('uint8'))
+[      2, 1, 1]       ndarray(shape=7, dtype=dtype('int64'))
+[      2, 1, 2]       ndarray(shape=4, dtype=dtype('float64'))
+[      2, 1, 3]       JaggedArray(starts=layout[2, 1, 3, 0], stops=layout[2, 1, 3, 1],
+                                  content=layout[2, 1, 3, 2])
+[   2, 1, 3, 0]         ndarray(shape=1, dtype=dtype('int64'))
+[   2, 1, 3, 1]         ndarray(shape=1, dtype=dtype('int64'))
+[   2, 1, 3, 2]         ndarray(shape=1, dtype=dtype('float64'))
+[      2, 1, 4]       Table(x=layout[2, 1, 4, 0], y=layout[2, 1, 4, 1])
+[   2, 1, 4, 0]         ndarray(shape=2, dtype=dtype('int64'))
+[   2, 1, 4, 1]         Table(z=layout[2, 1, 4, 1, 0])
+[2, 1, 4, 1, 0]           ndarray(shape=2, dtype=dtype('int64'))
+\end{minted}
+\end{columns}
+\end{frame}
+
+\begin{frame}[fragile]{High-level type is defined by what \mintinline{python}{f[x]} returns}
+\small
+\begin{minted}{python}
+>>> print(array.type)
+[0, 3) -> [0, inf) -> ?((float64             |
+                         [0, inf) -> float64 |
+                         'x' -> int64
+                         'y' -> 'z' -> int64 ))
+\end{minted}
+
+\normalsize
+\vspace{0.5 cm}
+{\bf That is,}
+\begin{itemize}
+\item first square bracket in \mintinline{python}{array[x]} takes a non-negative integer less than 3;
+\item second takes a non-negative integer (unknown upper limit because it's jagged);
+\item what that returns is nullable (might be \mintinline{python}{None});
+\item and it could be a \mintinline{python}{float}, a jagged array of floats, or a record taking \mintinline{python}{'x'} or \mintinline{python}{'y'};
+\item \mintinline{python}{'x'} returns an integer; \mintinline{python}{'y'} returns another record taking \mintinline{python}{'z'} to integers.
+\end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]{A more realistic example}
+\begin{columns}
+\column{1.07\linewidth}
+\small
+\begin{minted}{python}
+>>> import urllib.request
+>>> stars = awkward.fromiter(
+...     json.load(
+...         urllib.request.urlopen(
+...            "http://scikit-hep.org/uproot/examples/exoplanets.json")))
+>>> stars
+<Table [<Row 0> <Row 1> <Row 2> ... <Row 2933> <Row 2934>]>
+\end{minted}
+
+\begin{minted}{python}
+>>> stars[0].tolist()
+{'name': '11 Com', 'ra': 185.179276, 'dec': 17.792868, 'dist': 93.37, 'mass': 2.7, 'radius': 19.0
+
+
+{'planets': [{'eccen': 0.231, 'mass': 19.4, 'name': 'b', 'orbit': 1.29, 'period': 326.03, 'radius': None}], }
+\end{minted}
+
+
+
+\end{columns}
+\end{frame}
+
+
 
 
 \begin{frame}{}
